--- a/css/style.css
+++ b/css/style.css
@@ -422,4 +422,38 @@ footer ul li a:hover {
     color: var(--color-white);
     cursor: pointer;
   }
+
+  nav button#close-menu-btn{
+    display: none;
+  }
+
+  .nav__menu {
+    position: fixed;
+    top: 5rem;
+    right: 5%;
+    height: fit-content;
+    width: 18rem;
+    flex-direction: column;
+    gap: 0;
+    display: none;
+  }
+
+  .nav__menu li{
+    width: 100%;
+    height: 5.8rem;
+  }
+
+  .nav__menu a{
+    background: var(--color-primary);
+    box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+    height: 100%;
+    width: 100%;
+    display: grid;
+    place-items: center;
+  }
+
+  .nav__menu li a:hover{
+    background: var(--color-bg2);
+    color: var(--color-white);
+  }
 }
