--- a/css/style.css
+++ b/css/style.css
@@ -399,23 +399,23 @@ footer ul li a:hover {
     width: var(--container-width-md);
   }
 
-  h1{
+  h1 {
     font-size: 2.2rem;
   }
 
-  h2{
+  h2 {
     font-size: 1.7rem;
   }
 
-  h3{
+  h3 {
     font-size: 1.4rem;
   }
 
-  h4{
+  h4 {
     font-size: 1.2rem;
   }
 
-  nav button{
+  nav button {
     display: inline-block;
     background: transparent;
     font-size: 1.8rem;
@@ -423,7 +423,7 @@ footer ul li a:hover {
     cursor: pointer;
   }
 
-  nav button#close-menu-btn{
+  nav button#close-menu-btn {
     display: none;
   }
 
@@ -438,12 +438,36 @@ footer ul li a:hover {
     display: none;
   }
 
-  .nav__menu li{
+  .nav__menu li {
     width: 100%;
     height: 5.8rem;
+    animation: animateNavItems 400ms linear forwards;
+    transform-origin: top right;
+    opacity: 0;
   }
 
-  .nav__menu a{
+  .nav__menu li:nth-child(2){
+    animation-delay: 200ms;
+  }
+
+  .nav__menu li:nth-child(3){
+    animation-delay: 400ms;
+  }
+
+  .nav__menu li:nth-child(4){
+    animation-delay: 600ms;
+  }
+
+  @keyframes animateNavItems {
+    0% {
+      transform: rotateZ(-90deg);
+    }
+    100% {
+      transform: rotateZ(0deg);
+      opacity: 1;
+    }
+  }
+  .nav__menu a {
     background: var(--color-primary);
     box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
     height: 100%;
@@ -452,8 +476,101 @@ footer ul li a:hover {
     place-items: center;
   }
 
-  .nav__menu li a:hover{
+  .nav__menu li a:hover {
     background: var(--color-bg2);
     color: var(--color-white);
   }
+
+  header{
+    height: fit-content;
+    margin-top: 1rem;
+  }
+
+  .header__container{
+    gap:0;
+    padding-bottom: 4rem;
+  }
+
+  .categories{
+    height: fit-content;
+  }
+  .categories__container{
+    grid-template-columns: 1fr;
+    gap:3rem;
+  }
+  
+  .categories__left{
+    margin-right: 0;
+  }
+
+  .course{
+    margin-top: 0;
+  }
+
+  .courses__container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .faqs__container{
+    grid-template-columns: 1fr;
+  }
+  
+  .faq{
+    padding: 1.5rem;
+  }
+
+  .footer__container{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  .nav__menu{
+    right: 2%;
+  }
+
+  .nav__menu li{
+    width: 80%;
+    height: 3.5rem;
+  }
+  header{
+    height: 110vh;
+  }
+
+  .header__container{
+    grid-template-columns: 1fr;
+    text-align: center;
+    height: 100vh;
+    gap:1rem;
+    }
+  
+    .categories__right{
+      grid-template-columns: 1fr 1fr;
+      gap:0.7rem;
+    }
+
+    .courses__container{
+      grid-template-columns: 1fr;
+    }
+
+    .footer__container{
+      grid-template-columns: 1fr;
+      gap:2rem;
+      padding-top: 3rem;
+      text-align: center;
+      padding-bottom: 2rem;
+    }
+
+    .footer__container h4{
+      font-size: 1.5rem;
+    }
+
+    .footer__socials{
+      justify-content: center;
+    }
+
 }
